# CodeRAG-Lab

./: .env.example  .gitignore  12 weeks plan.md  DEVELOPMENT_LOG.md  Dockerfile  INTERVIEW_GUIDE.md  LICENSE  Makefile  PAUSE.md  PROJECT_BOOK.md  README.md  README_VISUALS.md  USAGE.md  docker-compose-simple.yml  docker-compose.yml  pyproject.toml  前端MVP指南.md  郑文泽简历.md
.github/workflows/: ci.yml  secrets-scan.yml
data/eval/: coderag_eval_v1.json
docker/: .gitignore  docker-compose-simple.yml  docker-compose.yml  start_all.sh
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/sql/: init.sql
frontend/: package-lock.json
frontend-Next.js/: Dockerfile  package.json
frontend-Next.js/src/app/: layout.tsx
frontend-Next.js/src/app/chat/: page.tsx
frontend-Next.js/src/app/dashboard/: page.tsx
frontend-Next.js/src/store/: chatStore.ts
frontend-Next.js/src/types/: index.ts
frontend-vue3/: .gitignore  package-lock.json  package.json  vite.config.js
frontend-vue3/src/: main.js
frontend-vue3/src/api/: chat.js  dataset.js
frontend-vue3/src/styles/: index.scss  variables.scss
frontend-vue3/src/utils/: request.js
frontend-vue3/src/views/chat/: index.vue
frontend/src/: global.d.ts
frontend/src/app/: not-found.tsx
frontend/src/lib/: api.ts
server/: .env.example  requirements.txt
server/app/: __init__.py  config.py  main.py
server/app/api/: __init__.py  deps.py
server/app/models/: __init__.py
server/app/schemas/: __init__.py
server/app/services/: evaluation.py  llm.py  prompt.py  retriever.py
server/app/utils/: logging.py  security.py
server/src/coderag/: __init__.py  cli.py  exceptions.py  logging.py  security.py  settings.py
src/coderag/: cli.py  settings.py
src/coderag/api/: main.py  schemas.py
src/coderag/data/: prepare_dataset.py
src/coderag/eval/: __init__.py  dataset.py  lora_comparison.py  metrics.py  runner.py
src/coderag/ingest/: __init__.py  chunker.py  document_parser.py
src/coderag/llm/: embedding.py  lora.py  provider.py  simple_embedding.py
src/coderag/rag/: __init__.py  pgvector_store.py  qdrant_store.py  reranker.py  retriever.py
tests/: test_api.py  test_faiss.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.vue
web/src/api/: chat.js  dataset.js
web/src/router/: index.js
web/src/utils/: markdown.js
web/tests/: markdown.test.js
(+34 files in other folders)
