[project]
name = "coderag"
version = "0.1.0"
description = "可溯源代码库助手"
authors = [
    { name = "Developer", email = "developer@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "requests",
    "qdrant-client",
    "click",
    "python-dotenv",
    "faiss-cpu",
    "sentence-transformers",
    "rank-bm25",
    "transformers",
    "peft",
    "torch",
    "datasets",
    "accelerate",
    "whoosh",
    "pypdf",
    "python-docx",
    "psycopg2-binary",
    "pgvector",
    "zhipuai",
    "psutil",
] 

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "uvicorn[standard]",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
enabled = ["E", "F", "W"]

[tool.black]
line-length = 88
target-version = ["py39"]