[project]
name = "coderag"
version = "0.1.0"
description = "可溯源代码库助手"
authors = [
    { name = "Developer", email = "developer@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "qdrant-client>=1.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "whoosh>=2.7.4",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "zhipuai>=2.0.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
] 

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "uvicorn[standard]",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
enabled = ["E", "F", "W"]

[tool.black]
line-length = 88
target-version = ["py39"]